<resources>
    <string name="app_name">Video app</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_create">Create</string>
    <string name="title_subscriptions">Subscriptions</string>
    <string name="title_profile">Profile</string>
    <string name="create_page_title">My videos</string>
    <string name="no_videos">You don\'t have any videos yet</string>
    <string name="search_videos">Search videos</string>
    <string name="language">Language</string>
    <string name="update_profile">Update profile</string>
    <string name="log_out">Log out</string>
    <string name="delete_profile">Delete profile</string>
    <string name="creation_date">Account was created %1$s</string>
    <string name="total_views">Videos watched: %1$d</string>
    <string name="total_likes">Liked videos: %1$d</string>
    <string name="total_dislikes">Disliked videos: %1$d</string>
    <string name="liked_videos">Liked videos</string>
    <string name="disliked_videos">Disliked videos</string>
    <string name="watched_videos">Watched videos</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="most_liked">Most liked</string>
    <string name="most_disliked">Most disliked</string>
    <string name="subscribers">Subscribers %1$d</string>
    <string name="views">Views %1$d</string>
    <string name="videos">Videos %1$d</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>

    <plurals name="replies">
        <item quantity="one">One reply</item>
        <item quantity="other">%1$d replies</item>
    </plurals>
    <string name="delete_comment">Delete comment?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="comment_deleted">Comment deleted</string>
    <string name="recommendations">Recommendations</string>
    <string name="comments">Comments</string>
    <string name="replies">Replies</string>
    <string name="replay_to_comment">Reply to comment…</string>
    <string name="comment_failed">Error creating comment</string>
    <string name="delete_profile_confirmation">Are you sure you want to delete your profile?</string>
    <string name="profile_deleted">Profile deleted successfully</string>
    <string name="deleting_profile_failed">Failed to delete profile</string>
    <string name="profile_updated">Profile updated successfully</string>

    <string name="select_new_picture">Pick new picture</string>
    <string name="change_profile_picture">Update profile picture</string>
    <string name="change_bio">Update bio</string>
    <string name="change_password">Update password</string>
    <string name="cancel">Cancel</string>
    <string name="bio">Bio</string>
    <string name="new_password">New password</string>
    <string name="videos_fail">Failed to get videos</string>
    <string name="write_comment">Write a comment</string>

    <string name="login"> Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_failed">Login failed</string>
    <string name="logged_in">Login successful</string>
    <string name="wrong__login_info">Incorrect username or password</string>
    <string name="Profile_picture_optional">Profile picture (optional)</string>
    <string name="create_account">Create account</string>
    <string name="username_taken">Username is not available</string>

    <string name="no_videos_available">No videos available</string>
    <string name="failed_to_get_profile">Failed to get profile</string>

    <string name="no_subscriptions_text">You haven\'t subscribed any channels yet</string>

    <string name="english">English</string>
    <string name="finnish">Finnish</string>

    <string name="upload_video">Upload video</string>
    <string name="video_title">Video title</string>
    <string name="video_description">Video description</string>
    <string name="thumbnail_optional">Thumbnail (optional)</string>
    <string name="pick_thumbnail">Pick thumbnail</string>
    <string name="video">Video</string>
    <string name="pick_video_from_gallery">Pick video from gallery</string>
    <string name="take_video">Take video</string>
    <string name="delete_video">Delete video</string>
    <string name="preview_video">Preview video</string>
    <string name="visibility">Visibility</string>
    <string name="public_text">Public</string>
    <string name="private_text">Private</string>
    <string name="add_video">Add video</string>
    <string name="video_question">pick video from gallery or take video?</string>

    <string name="no_videos_watched">You haven\'t watched any videos yet</string>
    <string name="no_videos_liked">You haven\'t liked any videos yet</string>
    <string name="no_videos_disliked">You haven\'t disliked any videos yet</string>
    <string name="channel_and_date">%1$s \t %2$s</string>
    <string name="likes_count">Likes: %1$d</string>
    <string name="dislikes_count">Disikes: %1$d</string>

    <string name="delete">Delete</string>
    <string name="delete_video_confirmation">Are you sure that you want to delete this video?</string>
    <string name="delete_post">Delete post</string>
    <string name="delete_post_confirmation">Are you sure that you want to delete this post?</string>
    <string name="delete_poll">Delete poll</string>
    <string name="delete_poll_confirmation">Are you sure that you want to delete this poll?</string>

    <string name="percentage">%1$d %%</string>

    <string name="create_question">What would you like to create?</string>
    <string name="poll">Poll</string>
    <string name="post">Post</string>

    <string name="no_medias">You don\'t have any videos, posts or polls yet</string>
    <string name="votes">%1$d votes</string>

    <string name="upload_post">Upload post</string>
    <string name="upload_poll">Upload poll</string>
    <string name="content">Content</string>
    <string name="images">Images</string>
    <string name="preview_post">preview post</string>
    <string name="delete_image">Delete image</string>
    <string name="remove_image_question">Do you want to remove this image?</string>
    <string name="remove">Remove</string>
    <string name="pick_or_select_image">Take a picture or pick from gallery</string>
    <string name="take_picture">Take a picture</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="video_creation_failed">Failed to create video</string>
    <string name="poll_items">Poll items</string>
    <string name="add_poll_item">Add new poll item</string>
    <string name="preview_poll">Preview poll</string>
    <string name="no_poll_items_added">You haven\'t added any poll items yet</string>
    <string name="remove_poll_item_question">Remove this poll item?</string>
    <string name="wrong_poll_item_count">Poll must have 2–4 answer options</string>
    <string name="title">Title</string>
    <string name="image">Image</string>
    <string name="add_image">Add image</string>
    <string name="delete_poll_item">Are you sure you want to delete this poll item?</string>

    <plurals name="year_ago">
        <item quantity="one">a year ago</item>
        <item quantity="other">%1$d years ago</item>
    </plurals>

    <plurals name="month_ago">
        <item quantity="one">a month ago</item>
        <item quantity="other">%1$d months ago</item>
    </plurals>

    <plurals name="day_ago">
        <item quantity="one">a day ago</item>
        <item quantity="other">%1$d days ago</item>
    </plurals>

    <plurals name="hour_ago">
        <item quantity="one">an hour ago</item>
        <item quantity="other">%1$d hours ago</item>
    </plurals>

    <plurals name="minute_ago">
        <item quantity="one">a minute ago</item>
        <item quantity="other">%1$d minutes ago</item>
    </plurals>

    <plurals name="second_ago">
        <item quantity="one">a second ago</item>
        <item quantity="other">%1$d seconds ago</item>
    </plurals>

    <string name="video_sent">Video sent for processing, it may take a while to finish</string>
    <string name="sending_video">Uploading video. This may take a while</string>
</resources>
